[package]
name = "overflower"
version = "0.4.0"
authors = ["Andre Bogus <bogusandre@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/llogiq/overflower"
description = "A compiler plugin to easily select overflow behavior for all integer operations of an item"
readme = "README.md"
keywords = ["arithmetic", "overflow", "plugin"]
categories = ["development-tools"]

[badges]
travis-ci = { repository = "llogiq/overflower" }

[lib]
crate-type = [ "dylib" ]
plugin = true

[dependencies]
overflower_support = { version = "0.1.5", path = "support" }
