[package]
name = "overflower"
version = "0.4.6"
authors = ["Andre Bogus <bogusandre@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/llogiq/overflower"
description = "A compiler plugin to easily select overflow behavior for all integer operations of an item"
readme = "README.md"
keywords = ["arithmetic", "overflow", "plugin"]
categories = ["development-tools"]

[badges]
travis-ci = { repository = "llogiq/overflower" }

[lib]
proc_macro = true

[dependencies]
overflower_support = { version = "0.1.5", path = "support" }
syn = { version = "1.0.1", features = ["extra-traits", "full", "fold", "parsing", "proc-macro"] }
quote = "1.0.2"
