[package]
authors = ["Andre Bogus <bogusandre@gmail.com>"]
categories = ["development-tools"]
description = "A compiler plugin to easily select overflow behavior for all integer operations of an item"
edition = "2018"
license = "Apache-2.0"
name = "overflower-plugin"
readme = "README.md"
repository = "https://github.com/llogiq/overflower"
keywords = ["arithmetic", "overflow", "plugin"]
version = "0.9.0"

[badges]
travis-ci = { repository = "llogiq/overflower" }

[lib]
proc_macro = true

[dependencies]
syn = { version = "2.0.16", features = ["extra-traits", "full", "fold", "parsing", "proc-macro"] }
quote = "1.0.0"
