[package]
authors = ["Andre Bogus <bogusandre@gmail.com>"]
categories = ["development-tools"]
description = "A proc macro attribute plus helper library to allow annotating code to modify arithmetic overflow handling" 
edition = "2018"
keywords = ["arithmetic", "overflow"]
license = "Apache-2.0"
name = "overflower"
repository = "https://github.com/llogiq/overflower"
version = "1.0.0"

[dependencies]
overflower-plugin = { path = "../overflower-plugin" }

[dev-dependencies]
quickcheck = "0.9"
