[package]
name = "overflower_support"
version = "0.1.4"
description = "A bunch of specialized traits + impls to allow automated overflow handling without type inference. Nightly only" 
authors = ["Andre Bogus <bogusandre@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/llogiq/overflower"
keywords = ["arithmetic", "overflow", "nightly"]

[dev-dependencies]
quickcheck = "^0.2"
